--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="Лендинги, WordPress, Telegram-боты, поддержка и хостинг. Проекты под любой бюджет и сложность. RU / PT-BR." />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Exo+2:wght@100..900&family=Inter:wght@400;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css" />
   <!-- Favicon (SVG data URI) -->
   <link rel="icon" href='data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64"><rect width="64" height="64" rx="12" fill="%230EA5E9"/><path d="M14 44 L26 20 L32 32 L38 20 L50 44" fill="none" stroke="white" stroke-width="5" stroke-linecap="round" stroke-linejoin="round"/></svg>'>
@@ -24,7 +24,7 @@
   {
     "@context": "https://schema.org",
     "@type": "ProfessionalService",
-    "name": "Make in Site",
+    "name": "Webmake",
     "url": "https://example.com",
     "areaServed": ["BR", "RU", "PT"],
     "sameAs": ["https://t.me/makeinsite"]
@@ -36,7 +36,7 @@
 
   <header class="site-header" id="top">
     <div class="container header-inner">
-      <div class="logo">Make in Site</div>
+      <div class="logo">WEBMAKE</div>
       <nav class="nav" aria-label="Основное меню">
         <button class="nav-toggle" aria-expanded="false" aria-controls="navList" aria-label="Меню">☰</button>
         <ul id="navList">
