уменьшение меню при скролле

--- a/project.html
+++ b/project.html
@@ -39,7 +39,7 @@
             </div>
             
             <div class="project-link">
-              <a href="#" target="_blank" rel="noopener" class="btn">
+              <a href="https://hdloveyourself.com/" target="_blank" rel="noopener" class="btn">
                 Перейти на сайт →
               </a>
             </div>
@@ -52,54 +52,6 @@
                 консультации и обучающие программы. Современный дизайн с акцентом на доверие и экспертность.
               </p>
             </div>
-
-            <div class="project-section">
-              <h2>Что было сделано</h2>
-              <ul class="project-features">
-                <li>Адаптивный дизайн с фокусом на конверсию</li>
-                <li>Форма заказа расшифровки с интеграцией</li>
-                <li>Блок с отзывами и кейсами клиентов</li>
-                <li>SEO-оптимизация для поисковых систем</li>
-                <li>Интеграция с системами аналитики</li>
-                <li>Настройка целей и метрик конверсии</li>
-                <li>Оптимизация скорости загрузки</li>
-                <li>Интеграция с CRM и платежными системами</li>
-              </ul>
-            </div>
-
-            <div class="project-section">
-              <h2>Технологии</h2>
-              <div class="project-tech">
-                <span class="tech-tag">HTML5</span>
-                <span class="tech-tag">CSS3</span>
-                <span class="tech-tag">JavaScript</span>
-                <span class="tech-tag">PHP</span>
-                <span class="tech-tag">MySQL</span>
-                <span class="tech-tag">WordPress</span>
-                <span class="tech-tag">Google Analytics</span>
-                <span class="tech-tag">Yandex.Metrica</span>
-              </div>
-            </div>
-
-            <div class="project-details-card">
-              <h3>Детали проекта</h3>
-              <div class="project-detail">
-                <span class="detail-label">Клиент</span>
-                <span class="detail-value">Human Design Studio</span>
-              </div>
-              <div class="project-detail">
-                <span class="detail-label">Срок</span>
-                <span class="detail-value">14 дней</span>
-              </div>
-              <div class="project-detail">
-                <span class="detail-label">Команда</span>
-                <span class="detail-value">2 специалиста</span>
-              </div>
-              <div class="project-detail">
-                <span class="detail-label">Статус</span>
-                <span class="detail-value">Завершен</span>
-              </div>
-            </div>
           </div>
         </div>
 
@@ -109,34 +61,72 @@
       </div>
     </section>
 
-    <section class="project-gallery-section">
+    <section class="project-goals-section">
       <div class="container">
-        <h2>Дополнительные материалы</h2>
-        <div class="gallery-grid">
-          <div class="gallery-item">
-            <img src="media/hd/hd.png" alt="Главная страница лендинга Human Design" class="gallery-image">
-            <div class="gallery-overlay">
-              <span class="gallery-caption">Главная страница</span>
-            </div>
+        <div class="project-goals">
+          <div class="goal-item">
+            <span class="goal-label">Цель:</span>
+            <span class="goal-text">Увеличить количество заявок на консультации и расшифровки карт Human Design через интернет.</span>
           </div>
-          <div class="gallery-item">
-            <img src="media/hd/hd.png" alt="Форма заказа расшифровки" class="gallery-image">
-            <div class="gallery-overlay">
-              <span class="gallery-caption">Форма заказа</span>
-            </div>
+
+          <div class="goal-item">
+            <span class="goal-label">Задача:</span>
+            <span class="goal-text">Создать продающий лендинг с интуитивной навигацией, понятным описанием услуг и удобной формой заказа.</span>
           </div>
-          <div class="gallery-item">
-            <img src="media/hd/hd.png" alt="Блок с отзывами клиентов" class="gallery-image">
-            <div class="gallery-overlay">
-              <span class="gallery-caption">Отзывы клиентов</span>
-            </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="project-features-section">
+      <div class="container">
+        <h2 class="section-title-center">Что было сделано</h2>
+        <ul class="project-features-list">
+          <li>Адаптивный дизайн с фокусом на конверсию</li>
+          <li>Разработка изображений с применением ИИ</li>
+          <li>Создание текстового контента</li>
+          <li>SEO-оптимизация для поисковых систем</li>
+          <li>Интеграция с системами аналитики</li>
+          <li>Настройка целей и метрик конверсии</li>
+          <li>Оптимизация скорости загрузки</li>
+        </ul>
+
+        <div class="project-details-card">
+          <h3>Детали проекта</h3>
+          <div class="project-detail">
+            <span class="detail-label">Срок</span>
+            <span class="detail-value">14 дней</span>
           </div>
-          <div class="gallery-item">
-            <img src="media/hd/hd.png" alt="Мобильная версия лендинга" class="gallery-image">
-            <div class="gallery-overlay">
-              <span class="gallery-caption">Мобильная версия</span>
-            </div>
+          <div class="project-detail">
+            <span class="detail-label">Команда</span>
+            <span class="detail-value">2 специалиста</span>
           </div>
+          <div class="project-detail">
+            <span class="detail-label">Статус</span>
+            <span class="detail-value">Завершен</span>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="project-gallery-section">
+      <div class="gallery-grid">
+        <div class="gallery-item">
+          <img src="media/hd/1.png" alt="Скриншот проекта" class="gallery-image">
+        </div>
+        <div class="gallery-item">
+          <img src="media/hd/2.png" alt="Скриншот проекта" class="gallery-image">
+        </div>
+        <div class="gallery-item">
+          <img src="media/hd/3.png" alt="Скриншот проекта" class="gallery-image">
+        </div>
+        <div class="gallery-item">
+          <img src="media/hd/4.png" alt="Скриншот проекта" class="gallery-image">
+        </div>
+        <div class="gallery-item">
+          <img src="media/hd/5.png" alt="Скриншот проекта" class="gallery-image">
+        </div>
+        <div class="gallery-item">
+          <img src="media/hd/6.png" alt="Скриншот проекта" class="gallery-image">
         </div>
       </div>
     </section>
