--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Студия разработки — сайты, боты, поддержка | Make in Site</title>
+  <title>Студия разработки — сайты, боты, поддержка | WebMake</title>
   <meta name="description" content="Лендинги, WordPress, Telegram-боты, поддержка и хостинг. Проекты под любой бюджет и сложность. RU / PT-BR." />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -60,7 +60,7 @@
       <div class="container hero-inner">
         <div class="hero-text">
           <h1 id="heroTitle">
-            Студия разработки: сайты, Telegram-боты, поддержка, хостинг, приложения
+            сайты, Telegram-боты, поддержка, хостинг, приложения
           </h1>
           <p class="lead">
             Проекты под любой бюджет и сложность. От лендингов и WordPress до кастомных решений.
@@ -599,6 +599,7 @@
       <div class="container">
         <h2 id="contactsTitle" class="section-title">Контакты</h2>
         <div class="contacts">
+          <h3 class="contacts-heading">Возникли вопросы? Свяжитесь с нами любым удобным для вас способом</h3>
           <div class="contact-actions">
             <a class="btn" href="mailto:omakeykina@gmail.com">E-mail</a>
             <a class="btn" href="https://t.me/Olga_Makey" target="_blank" rel="noopener">Telegram</a>
