--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       <div class="container hero-inner">
         <div class="hero-text">
           <h1 id="heroTitle">
-            сайты, Telegram-боты, поддержка, хостинг, приложения
+            сайты, чат-боты, приложения, поддержка, хостинг
           </h1>
           <p class="lead">
             Проекты под любой бюджет и сложность. От лендингов и WordPress до кастомных решений.
