--- a/index.html
+++ b/index.html
@@ -148,15 +148,13 @@
             <h2 id="aboutTitle" class="section-title">О нас</h2>
             <div class="about-description">
               <p class="lead">
-                Мы — команда разработчиков, которая создает цифровые решения для бизнеса любого масштаба.
+                Мы — специалисты в области IT из разных направлений, объединившие знания и опыт, чтобы создавать комплексные решения для бизнеса любого масштаба.
               </p>
               <p>
-                Наша студия специализируется на разработке сайтов, Telegram-ботов, технической поддержке и хостинге. 
-                Работаем с клиентами из России и других стран, предлагая решения под любой бюджет и сложность.
+                В нашей команде — разработчики, дизайнеры, DevOps-инженеры и тестировщики. Каждый из нас эксперт в своём деле, и вместе мы превращаем идеи в работающие IT-инструменты, созданные под конкретные задачи вашего бизнеса.
               </p>
               <p>
-                Мы не просто пишем код — мы решаем бизнес-задачи. Каждый проект начинается с глубокого анализа 
-                ваших потребностей и заканчивается работающим инструментом, который приносит результат.
+                Мы не просто пишем код — мы ищем суть задачи и предлагаем решение, которое приносит результат.
               </p>
             </div>
             
