--- a/index.html
+++ b/index.html
@@ -143,9 +143,9 @@
     <!-- О НАС -->
     <section id="about" class="section" aria-labelledby="aboutTitle">
       <div class="container">
+        <h2 id="aboutTitle" class="section-title">О нас</h2>
         <div class="about-content">
           <div class="about-text">
-            <h2 id="aboutTitle" class="section-title">О нас</h2>
             <div class="about-description">
               <p class="lead">
                 Мы — специалисты в области IT из разных направлений, объединившие знания и опыт, чтобы создавать комплексные решения для бизнеса любого масштаба.
@@ -169,8 +169,8 @@
               <div class="feature">
                 <div class="feature-icon">02</div>
                 <div class="feature-content">
-                  <h4>Международный опыт</h4>
-                  <p>Работаем с клиентами по всему миру</p>
+                  <h4>Гибкая система оплаты</h4>
+                  <p>Поэтапная оплата, удобные способы расчета под ваши возможности</p>
                 </div>
               </div>
               <div class="feature">
