--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@
     </section>
 
     <!-- ПРОЦЕСС -->
-    <section id="process" class="section" aria-labelledby="processTitle">
+    <section id="process" class="section process-section" aria-labelledby="processTitle">
       <div class="container">
         <h2 id="processTitle" class="section-title">Как мы работаем</h2>
         <ol class="process-grid">
@@ -586,7 +586,7 @@
     </section>
 
     <!-- FAQ -->
-    <section id="faq" class="section" aria-labelledby="faqTitle">
+    <section id="faq" class="section" aria-labelledby="faqTitle" style="display: none;">
       <div class="container">
         <h2 id="faqTitle" class="section-title">Ответы на вопросы</h2>
         <div class="accordion" id="faqList">
