--- a/index.html
+++ b/index.html
@@ -44,10 +44,7 @@
           <li><a href="#about">О нас</a></li>
           <li><a href="#team">Команда</a></li>
           <li><a href="#portfolio">Портфолио</a></li>
-          <li><a href="#reviews">Отзывы</a></li>
           <li><a href="#process">Процесс</a></li>
-          <li><a href="#pricing">Цены</a></li>
-          <li><a href="#faq">FAQ</a></li>
           <li><a href="#contacts" class="btn btn--small">Обсудить проект</a></li>
         </ul>
       </nav>
@@ -672,16 +669,15 @@
       
       <div class="footer-nav">
         <div class="footer-column">
-          <h4>О нас</h4>
+          <h4>Навигация</h4>
           <a href="#services">Услуги</a>
           <a href="#about">О нас</a>
+          <a href="#team">Команда</a>
           <a href="#portfolio">Портфолио</a>
-          <a href="#process">Процесс</a>
         </div>
         <div class="footer-column">
-          <h4>Клиенты</h4>
-          <a href="#pricing">Цены</a>
-          <a href="#faq">FAQ</a>
+          <h4>Информация</h4>
+          <a href="#process">Процесс работы</a>
           <a href="#contacts">Контакты</a>
         </div>
       </div>
