--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
     <!-- УСЛУГИ -->
     <section id="services" class="section" aria-labelledby="servicesTitle">
       <div class="container">
-        <h2 id="servicesTitle" class="section-title">Услуги</h2>
+        <h2 id="servicesTitle" class="section-title">ЧТО МЫ ПРЕДЛАГАЕМ</h2>
         
         <!-- Табы -->
         <div class="services-tabs" role="tablist" aria-label="Категории услуг">
