--- a/project.html
+++ b/project.html
@@ -63,16 +63,16 @@
 
     <section class="project-goals-section">
       <div class="container">
-        <div class="project-goals">
-          <div class="goal-item">
-            <span class="goal-label">Цель:</span>
-            <span class="goal-text">Увеличить количество заявок на консультации и расшифровки карт Human Design через интернет.</span>
-          </div>
-
-          <div class="goal-item">
-            <span class="goal-label">Задача:</span>
-            <span class="goal-text">Создать продающий лендинг с интуитивной навигацией, понятным описанием услуг и удобной формой заказа.</span>
-          </div>
+        <div class="goal-card">
+          <img src="icons8-goal-96.png" alt="Цель" class="goal-icon">
+          <h2 class="goal-title">Цель</h2>
+          <p class="goal-description">Увеличить количество заявок на консультации и расшифровки карт Human Design через интернет.</p>
+        </div>
+        
+        <div class="goal-card">
+          <img src="icons8-task-96.png" alt="Задача" class="goal-icon">
+          <h2 class="goal-title">Задача</h2>
+          <p class="goal-description">Создать продающий лендинг с интуитивной навигацией, понятным описанием услуг и удобной формой заказа.</p>
         </div>
       </div>
     </section>
