--- a/project.html
+++ b/project.html
@@ -123,7 +123,7 @@
           <img src="media/hd/4.png" alt="Скриншот проекта" class="gallery-image">
         </div>
         <div class="gallery-item">
-          <img src="media/hd/5.png" alt="Скриншот проекта" class="gallery-image">
+          <img src="media/hd/5.jpg" alt="Скриншот проекта" class="gallery-image">
         </div>
         <div class="gallery-item">
           <img src="media/hd/6.png" alt="Скриншот проекта" class="gallery-image">
