--- a/delta.html
+++ b/delta.html
@@ -47,7 +47,7 @@
             <div class="project-section">
               <h2>Описание проекта</h2>
               <p class="project-description">
-                Сайт компании аренды складских помещений с умным ботом на базе AI для рекомендаций и отслеживания заказов.
+                Современный корпоративный сайт компании по аренде складских помещений с удобным каталогом и улучшенной навигацией.
               </p>
             </div>
           </div>
@@ -64,13 +64,13 @@
         <div class="goal-card">
           <img src="icons8-goal-96.png" alt="Цель" class="goal-icon">
           <h2 class="goal-title">Цель</h2>
-          <p class="goal-description">Автоматизировать процесс аренды складских помещений через сайт и Telegram бота.</p>
+          <p class="goal-description">Редизайн устаревшего сайта компании с сохранением всего существующего контента и фотоматериалов.</p>
         </div>
         
         <div class="goal-card">
           <img src="icons8-task-96.png" alt="Задача" class="goal-icon">
           <h2 class="goal-title">Задача</h2>
-          <p class="goal-description">Разработать умного бота с AI, который предлагает складские помещения на основе потребностей клиента.</p>
+          <p class="goal-description">Разработать современный дизайн с улучшенной структурой, адаптивной версткой и удобной навигацией по каталогу складских помещений.</p>
         </div>
       </div>
     </section>
@@ -79,13 +79,13 @@
       <div class="container">
         <h2 class="section-title-center">Что было сделано</h2>
         <ul class="project-features-list">
-          <li>Разработка сайта с каталогом помещений</li>
-          <li>Telegram бот с AI-рекомендациями</li>
-          <li>Система отслеживания заказов</li>
-          <li>Интеграция с системой оплаты</li>
+          <li>Полный редизайн сайта в современном стиле</li>
+          <li>Разработка каталога складских помещений</li>
+          <li>Улучшенная структура и навигация</li>
           <li>Адаптивный дизайн для всех устройств</li>
-          <li>SEO-оптимизация для поисковых систем</li>
-          <li>Интеграция с системами аналитики</li>
+          <li>Оптимизация под поисковые системы (SEO)</li>
+          <li>Сохранение всего существующего контента</li>
+          <li>Интеграция фотоматериалов из старого сайта</li>
         </ul>
 
         <div class="project-details-card">
